Fixed spacing on tab menu

--- a/frontend-web/src/components/TabMenu/TabMenu.css
+++ b/frontend-web/src/components/TabMenu/TabMenu.css
@@ -2,7 +2,7 @@
 	position: fixed;
 	display: inline-block;
 	margin-left: 1vw;
-	width: 20vw;
+	width: 19vw;
 	height: 100vh;
 	overflow-y: auto;
 	overflow-x: hidden;
